<resources>
    <string name="app_name" translatable="false">OnlineLibrary</string>
    <string name="open_drawer" translatable="false">open</string>
    <string name="close_drawer" translatable="false">close</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="nemas_nalog">Don\'t have an account?</string>
    <string name="zapamti_me">Remember me</string>
    <string name="nazad_na_log_in">Back to login</string>
    <string name="posalji">Send</string>
    <string name="sta_ste_zaboravili">What did you forget?</string>
    <string name="uskoro_cete_dobiti_email_sa_usernameom">You will get an email containing your username soon.</string>
    <string name="ukoliko_ne_primite_email">If you don\'t receive an email, contact the library administrator.</string>
    <string name="moji_zahtjevi">My transactions</string>
    <string name="lista_zelja">Wishlist</string>
    <string name="aktivnosti">Activities</string>
    <string name="moj_profil">My account</string>
    <string name="log_out">Log out</string>
    <string name="__knjige">books</string>
    <string name="podesavanja">Settings</string>
    <string name="jmbg">JMBG</string>
    <string name="korisnicko_ime">Username</string>
    <string name="sifra">Password</string>
    <string name="zaduzene_knjige">Rented books</string>
    <string name="vracene_knjige">Returned books</string>
    <string name="rezervacije">Reservations</string>
    <string name="ime">Name</string>
    <string name="stara_sifra">Old password</string>
    <string name="nova_sifra">New password</string>
    <string name="ukucajte_staru_sifru">Enter your old password</string>
    <string name="ukucajte_novu_sifru">Enter your new password</string>
    <string name="ponovo_ukucajte_novu_sifru">Enter your new password again</string>
    <string name="ponisti">Discard</string>
    <string name="sacuvano">Saved</string>
    <string name="sacuvaj">Save</string>
    <string name="edit_profil">Edit profile</string>
    <string name="nije_vracena">Not returned</string>
    <string name="zaduzivanje">Rent</string>
    <string name="odbijeno">Reservation rejected</string>
    <string name="rezervacija">Reservation</string>
    <string name="izdavanje_knjige">Book rent</string>
    <string name="rezervacija_knjige">Book reservation</string>
    <string name="zahtjev_info">Transaction info</string>
    <string name="ponisti_rezervaciju">Discard reservation</string>
    <string name="osoba_koja_je_izdala_knjigu">Person who issues the book</string>
    <string name="detalji_zahtjeva">Transaction details</string>
    <string name="filters">Filters</string>
    <string name="ukloni_filtere">Remove filters</string>
    <string name="search">Search</string>
    <string name="pretrazi_knjige">Search books</string>
    <string name="na_raspolaganju">Available</string>
    <string name="izdato">Rented</string>
    <string name="o_autoru">About the author</string>
    <string name="tip_zahtjeva">Transaction type</string>
    <string name="nema_aktivnosti">No activities</string>
    <string name="nema_knjiga">No books</string>
    <string name="nema_slicnih_knjiga">No similar books</string>
    <string name="procitaj_vise">Read more</string>
    <string name="procitaj_manje">Read less</string>
    <string name="opis">Description</string>
    <string name="detalji_o_ovoj_knjizi">Book details</string>
    <string name="dostupno_stanje">Availability</string>
    <string name="kategorije">Categories</string>
    <string name="zanrovi">Genres</string>
    <string name="autori">Authors</string>
    <string name="izdavac">Publisher</string>
    <string name="godina_izdavanja">Publish year</string>
    <string name="slicne_knjige">Similar books</string>
    <string name="specifikacije">Specification</string>
    <string name="broj_strana">Number of pages</string>
    <string name="pismo">Script</string>
    <string name="jezik">Language</string>
    <string name="povez">Binding</string>
    <string name="format">Format</string>
    <string name="isbn">ISBN</string>
    <string name="rezervisi">Reserve</string>
    <string name="ime_i_prezime">Full name</string>
    <string name="mobilni_telefon">Phone number</string>
    <string name="dostupnost">Availability</string>
    <string name="popularne_knjige">Popular books</string>
    <string name="pogledaj_jos">See more</string>
    <string name="skorija_pretrazivanja">Recent searches</string>
    <string name="notifikacije">Notifications</string>
    <string name="istorija_pretrazivanja">Search history</string>
    <string name="obrisi">Erase</string>
    <string name="verzija_aplikacije">App version</string>
    <string name="vam_je_izdao_knjigu">issued you the book</string>
    <string name="nevalidno_korisnicko_ime">Invalid username</string>
    <string name="nevalidan_email">Invalid email</string>
    <string name="nevalidan_podaci_o_korisniki">Invalid login data</string>
    <string name="slanje_podataka_neuspjesno">Sending data failed</string>
    <string name="ucitavanje_podataka_neuspjesno">Loading data failed</string>
    <string name="knjiga_je_na_raspolaganju">This book is available</string>
    <string name="knjiga_je_izdata_trenutno_je_nemamo_u_biblioteci">This book is currently unavailable</string>
    <string name="autor_nema_opis">No biography</string>
    <string name="knjige_od_autora_">"Books by author "</string>
    <string name="od">by</string>
    <string name="komad">pieces</string>
    <string name="komada">pieces</string>
    <string name="knjiga_je_sacuvana_u_listu_zelja">Book saved to wishlist</string>
    <string name="izaberite_datum">Choose a date</string>
    <string name="rezervacija_je_uspjesna">Reservation successful</string>
    <string name="izmjena_profila_neuspjesna">Editing profile failed</string>
    <string name="stara_sifra_nevalidna">Invalid old password</string>
    <string name="potvrda_sifre_nevelidna">Invalid password confirmation</string>
    <string name="ispunite_svako_polje">Please fill in every field</string>
    <string name="rezervisano">Reserved</string>
    <string name="kategorija">Category</string>
    <string name="zanr">Genre</string>
    <string name="autor">Author</string>
    <string name="rezultati_za">Results for</string>
    <string name="knjiga">books</string>
    <string name="rezultati">Results</string>
    <string name="istorija_pretrazivanja_uspjesno_obrisana">Search history erased successfully</string>
    <string name="lista_zelja_uspjesno_obrisana">Wishlist erased successfully</string>
    <string name="rezervacija_uspjesno_ponistena">Reservation discarded successfully</string>
    <string name="transakcija_uspjesno_obrisana">Transaction erased successfully</string>
    <string name="da_li_ste_sigurni_da_zelite_da_obrisete_ovu_transakciju">Are you sure you want to erase this transaction?</string>
    <string name="uppercase__ponisti">DISCARD</string>
    <string name="uppercase__obrisi">ERASE</string>
    <string name="uppercase__nazad">BACK</string>
    <string name="je_dodata_u_bazu_podataka">has been added to the library</string>
    <string name="username">Username</string>
    <string name="ne_mogu_da_pristupim_mom_nalogu">I can\'t access my account</string>
    <string name="morate_ukucati_podatke_da_pristupite_sistemu">Enter your login data to access the app</string>
    <string name="ukucajte_trazeni_podatak_i_dobicete_email">Enter the required data and you will receive an email with instructions on how to gain access to your account.</string>
    <string name="uskoro_cete_dobiti_email_sa_instrukcijama">You will get an email with instruction on how to reset your password soon</string>
    <string name="povratak_na_log_in">Back to login</string>
    <string name="zahtjev_uspjesno_poslat">Request sent successfully</string>
    <string name="knjige">Books</string>
    <string name="izbrisi_transakciju">Delete transaction</string>
    <string name="id_transakcije">Transaction ID</string>
    <string name="period_rezervacije">"Reservation period: "</string>
    <string name="uppercase__period_rezervacije">RESERVATION PERIOD</string>
    <string name="potvrda_rezervacije">Reservation approved</string>
    <string name="odbijanje_rezervacije">Reservation rejected</string>
    <string name="zaduzivanje_knjige">Book rented</string>
    <string name="razduzivanje_knjige">Book unrented</string>
    <string name="nova_knjiga">New book</string>
    <string name="notification_types">Reservation approved, Reservation rejected, Book rented, Book unrented, New book</string>
    <string name="sacuvani_podaci">Saved data</string>
    <string name="svi_primjerci_su_izdati_ne_mozete_rezervisati">No samples of the book are available, you cannot reserve it</string>
    <string name="ukupno__">Found</string>
    <string name="ne_mozete_obrisati_transakciju_knjiga_nije_vracena">This book hasn\'t been returned, you cannot erase the transaction</string>
    <string name="da_li_ste_sigurni_da_zelite_da_ponistite_ovu_rezervaciju">Are you sure you want to discard this reservation?</string>
    <string name="knjiga_po_imenu">A book called</string>
    <string name="nema_zahjteva">No transactions</string>
    <string name="app_language">App language</string>
    <string name="english">English</string>
    <string name="serbian">Serbian</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="enter_your_data_to_create_an_account">Enter your data to create a new account</string>
    <string name="password_confirm">Password confirmation</string>
    <string name="registration_failed">Registration failed</string>
    <string name="email_taken">Email taken</string>
    <string name="username_taken">Username taken</string>
    <string name="jmbg_taken">JMBG taken</string>
    <string name="password_too_short">Password too short</string>
    <string name="jmbg_should_contain_13_digits">The JMBG should contain 13 digits</string>
</resources>