<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.login.LoginFragment">

    <ImageView
        android:id="@+id/login_img_cortex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cortex"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/login_text_prijavite_se"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextHeadline6"
        android:text="@string/log_in"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_img_cortex" />

    <TextView
        android:id="@+id/login_text_morate_ukucati_podatke"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        style="@style/TextBody1"
        android:text="@string/morate_ukucati_podatke_da_pristupite_sistemu"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text_prijavite_se" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/login_text_morate_ukucati_podatke"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/TextInputLayout" >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/username"
            android:textColorHint="#3392EA"
            android:background="@drawable/edit_text_background" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/login_et_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="50dp"
        style="@style/TextInputLayout"
        app:passwordToggleEnabled="true" >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:background="@drawable/edit_text_background" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/login_check_zapamti_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_et_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextBody1"
        android:text="@string/zapamti_me"
        android:letterSpacing="0"
        app:layout_constraintLeft_toRightOf="@id/login_check_zapamti_me"
        app:layout_constraintTop_toTopOf="@id/login_check_zapamti_me"
        app:layout_constraintBottom_toBottomOf="@id/login_check_zapamti_me" />

    <Button
        android:id="@+id/login_btn_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:text="@string/log_in"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_text_ne_mogu_da_pristupim" />

    <TextView
        android:id="@+id/login_text_ne_mogu_da_pristupim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextLink"
        android:text="@string/ne_mogu_da_pristupim_mom_nalogu"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_text_nemas_nalog" />

    <TextView
        android:id="@+id/login_text_nemas_nalog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextLink"
        android:text="@string/nemas_nalog"
        android:layout_marginBottom="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>